Allow tenant administrators to change user roles
